--- a/calendar.html
+++ b/calendar.html
@@ -7,10 +7,12 @@
   <meta name="description" content="Your Daylee calendar – see your events, weather, and more.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
-    <link href="/css/calendar.css" rel="stylesheet">
+  <link href="/css/calendar.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 
 </head>
 <body>
+  <a><div id="top-link"><i class="fa-solid fa-arrow-left"></i> Dashboard</div></a>
   <div class="calendar-header">
     <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="calendar-logo">
     <div class="calendar-title">Your Calendar</div>
