--- a/calendar.html
+++ b/calendar.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <a><div id="top-link"><i class="fa-solid fa-arrow-left"></i> Dashboard</div></a>
+  <a href="/dashboard" id="top-link">< Dashboard</a>
   <div class="calendar-header">
     <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="calendar-logo">
     <div class="calendar-title">Your Calendar</div>
