--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <br>
     <span class="logo">daylee</span>
     <div class="subtitle">A calendar app, reimagined.<br>Smarter, simpler, and more connected to your day.</div>
-    <a href="/calendar.html">
+    <a href="/dashboard">
     <button class="cssbuttons-io-button">
   Get started
   <div class="icon">
