--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,7 @@
           </div>
         </li>
         </a>
-        <a href="/weather">
+        <a href="/ai">
         <li>
           <span class="feature-icon"><i class="fa-solid fa-robot"></i></span>
           <div>
@@ -52,7 +52,7 @@
           </div>
         </li>
         </a>
-        <a href="/calender">
+        <a href="/calendar">
         <li>
           <span class="feature-icon"><i class="fa-solid fa-calendar-days"></i></span>
           <div>
