--- a/ai.html
+++ b/ai.html
@@ -2,19 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Calendar Assistant</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 0; }
-    .container { max-width: 500px; margin: 40px auto; background: #fff; border-radius: 8px; box-shadow: 0 2px 8px #0001; padding: 24px; }
-    h1 { text-align: center; }
-    #chat { height: 300px; overflow-y: auto; border: 1px solid #ddd; border-radius: 4px; padding: 12px; background: #fafafa; margin-bottom: 16px; }
-    .user { color: #1976d2; margin-bottom: 8px; }
-    .ai { color: #388e3c; margin-bottom: 8px; }
-    #input-area { display: flex; gap: 8px; }
-    #user-input { flex: 1; padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
-    #send-btn { padding: 8px 16px; border: none; border-radius: 4px; background: #1976d2; color: #fff; cursor: pointer; }
-    #send-btn:hover { background: #1565c0; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Daylee Scedula</title>
+  <meta name="description" content="Your Daylee calendar – see your events, weather, and more.">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
+  <link href="/css/calendar.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
