--- a/ai.html
+++ b/ai.html
@@ -11,6 +11,7 @@
   <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
+  <a href="/dashboard" id="top-link">< Dashboard</a>
   <div class="container">
     <h1>AI Calendar Assistant</h1>
     <div id="chat"></div>
