--- a/ai.html
+++ b/ai.html
@@ -9,9 +9,27 @@
   <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
   <link href="/css/calendar.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
+  <style>
+    body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 0; }
+    .container { max-width: 500px; margin: 40px auto; background: #fff; border-radius: 8px; box-shadow: 0 2px 8px #0001; padding: 24px; }
+    h1 { text-align: center; }
+    #chat { height: 300px; overflow-y: auto; border: 1px solid #ddd; border-radius: 4px; padding: 12px; background: #fafafa; margin-bottom: 16px; }
+    .user { color: #1976d2; margin-bottom: 8px; }
+    .ai { color: #388e3c; margin-bottom: 8px; }
+    #input-area { display: flex; gap: 8px; }
+    #user-input { flex: 1; padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
+    #send-btn { padding: 8px 16px; border: none; border-radius: 4px; background: #1976d2; color: #fff; cursor: pointer; }
+    #send-btn:hover { background: #1565c0; }
+  </style>
 </head>
 <body>
   <a href="/dashboard" id="top-link">< Dashboard</a>
+    <header>
+     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
+     <br>
+    <span class="logo">daylee</span>
+    <div class="subtitle">Your Daylee Dashboard!</div>
+  </header>
   <div class="container">
     <h1>AI Calendar Assistant</h1>
     <div id="chat"></div>
