--- a/ai.html
+++ b/ai.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Your Daylee calendar – see your events, weather, and more.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
-  <link href="/css/calendar.css" rel="stylesheet">
+  <link href="/css/home.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
   <style>
     body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 0; }
