--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
   </main>
   <footer>
-    &copy; 2025 Daylee. All rights reserved.
+    Daylee -  Organize your life, your way.
   </footer>
 </body>
 </html>
