--- a/dashboard.html
+++ b/dashboard.html
@@ -78,7 +78,7 @@
     </section>
   </main>
   <footer>
-    &copy; 2025 Daylee. All rights reserved.
+    Daylee -  Organize your life, your way.
   </footer>
 </body>
 </html>v
