--- a/calendar.html
+++ b/calendar.html
@@ -355,5 +355,8 @@
     renderCalendar(currentMonth, currentYear);
     window.addEventListener('DOMContentLoaded', showTutorialIfFirstTime);
   </script>
+    <footer>
+    Daylee -  Organize your life, your way.
+  </footer>
 </body>
 </html>
