--- a/ai.html
+++ b/ai.html
@@ -28,7 +28,7 @@
      <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
      <br>
     <span class="logo">daylee</span>
-    <div class="subtitle">Your Daylee Dashboard!</div>
+    <div class="subtitle">Schedula - Your Schedule ChatBot</div>
   </header>
   <div class="container">
     <h1>AI Calendar Assistant</h1>
