--- a/ai.html
+++ b/ai.html
@@ -1,35 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Daylee Scedula</title>
   <meta name="description" content="Your Daylee calendar – see your events, weather, and more.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
-  <link href="/css/home.css" rel="stylesheet">
-  <link href="/css/main.css" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 0; }
-    .container { max-width: 500px; margin: 40px auto; background: #fff; border-radius: 8px; box-shadow: 0 2px 8px #0001; padding: 24px; }
-    h1 { text-align: center; }
-    #chat { height: 300px; overflow-y: auto; border: 1px solid #ddd; border-radius: 4px; padding: 12px; background: #fafafa; margin-bottom: 16px; }
-    .user { color: #1976d2; margin-bottom: 8px; }
-    .ai { color: #388e3c; margin-bottom: 8px; }
-    #input-area { display: flex; gap: 8px; }
-    #user-input { flex: 1; padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
-    #send-btn { padding: 8px 16px; border: none; border-radius: 4px; background: #1976d2; color: #fff; cursor: pointer; }
-    #send-btn:hover { background: #1565c0; }
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    #top-link {
+      position: absolute;
+      top: 1rem;
+      left: 1rem;
+      font-size: 0.9rem;
+      color: #2563eb;
+      text-decoration: none;
+    }
+
+    header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1.5rem 1rem 0.5rem;
+      text-align: center;
+    }
+
+    .logo {
+      font-weight: 700;
+      font-size: 1.5rem;
+      color: #2563eb;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+      color: #666;
+      margin-top: 0.25rem;
+    }
+
+    .container {
+      flex: 1;
+      width: 90%;
+      max-width: 600px;
+      margin: 1rem auto;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px #0001;
+      padding: 1.5rem;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
+    }
+
+    #chat {
+      height: 300px;
+      overflow-y: auto;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 12px;
+      background: #fafafa;
+      margin-bottom: 16px;
+      font-size: 0.95rem;
+    }
+
+    .user {
+      color: #1976d2;
+      margin-bottom: 8px;
+    }
+
+    .ai {
+      color: #388e3c;
+      margin-bottom: 8px;
+    }
+
+    #input-area {
+      display: flex;
+      flex-direction: row;
+      gap: 8px;
+    }
+
+    #user-input {
+      flex: 1;
+      padding: 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+
+    #send-btn {
+      padding: 8px 16px;
+      border: none;
+      border-radius: 4px;
+      background: #1976d2;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+
+    #send-btn:hover {
+      background: #1565c0;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+      padding: 1rem;
+      background: transparent;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 600px) {
+      #input-area {
+        flex-direction: column;
+      }
+
+      #send-btn {
+        width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
-  <a href="/dashboard" id="top-link">< Dashboard</a>
-    <header>
-     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
-     <br>
+  <a href="/dashboard" id="top-link">← Dashboard</a>
+  <header>
+    <img src="/uploads/images/daylee.png" alt="Daylee Logo"
+      style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
     <span class="logo">daylee</span>
     <div class="subtitle">Schedula - Your Schedule ChatBot</div>
   </header>
+
   <div class="container">
     <h1>AI Calendar Assistant</h1>
     <div id="chat"></div>
@@ -38,17 +154,20 @@
       <button type="submit" id="send-btn">Send</button>
     </form>
   </div>
+
+  <footer>
+    Daylee – Organize your life, your way.
+  </footer>
+
   <script>
-    // --- Calendar Storage Logic ---
-    // Events are stored as { date: 'YYYY-MM-DD', time: 'HH:MM', title, desc }
     function loadEvents() {
       return JSON.parse(localStorage.getItem('dayleeEvents') || '[]');
     }
+
     function saveEvents(events) {
       localStorage.setItem('dayleeEvents', JSON.stringify(events));
     }
 
-    // Helper: get next date for a weekday name (e.g. "monday")
     function getNextDateForWeekday(weekday) {
       const days = ['sunday','monday','tuesday','wednesday','thursday','friday','saturday'];
       const today = new Date();
@@ -56,32 +175,21 @@
       const targetIdx = days.indexOf(weekday.toLowerCase());
       let diff = targetIdx - todayIdx;
       if (diff < 0) diff += 7;
-      if (diff === 0) diff = 7; // always next week if today
+      if (diff === 0) diff = 7;
       const result = new Date(today);
       result.setDate(today.getDate() + diff);
       return result.toISOString().slice(0,10);
     }
 
-    // Helper: get all events for a weekday name
-    function getEventsForWeekday(weekday) {
-      const events = loadEvents();
-      // Find all events for the next occurrence of this weekday
-      const date = getNextDateForWeekday(weekday);
-      return events.filter(e => e.date === date);
-    }
-
-    // Helper: format events for a day
     function formatEventsForDate(date, weekday) {
       const events = loadEvents().filter(e => e.date === date);
       if (!events.length) return "No events scheduled for " + weekday + ".";
       return "Events for " + weekday + ":<br>" + events.map(e => "- " + (e.time || "All day") + ": " + e.title).join("<br>");
     }
 
-    // Helper: format all events
     function formatAllEvents() {
       const events = loadEvents();
       if (!events.length) return "No events scheduled.";
-      // Group by date
       const grouped = {};
       events.forEach(e => {
         if (!grouped[e.date]) grouped[e.date] = [];
@@ -97,10 +205,8 @@
       return out;
     }
 
-    // Parse user input for intent and details
     function parseInput(input) {
       input = input.toLowerCase();
-      // Add event: "add a dentist appointment at 3:00 on monday"
       let addMatch = input.match(/add (?:an?|the)?\s*(.*?)\s*(?:appointment|event)?\s*(?:at|@)?\s*([0-9:apm ]+)?\s*(?:on)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/);
       if (addMatch) {
         return {
@@ -110,37 +216,22 @@
           day: addMatch[3]
         };
       }
-      // Query: handle many ways to ask about a day
-      // Examples: "can i hang out with friends on tuesday", "do i have anything on friday", "what's on monday", "am i free thursday", "is there anything on saturday"
-      let queryMatch = input.match(
-        /(can i|do i|am i|is there|what's|what is|show|list|anything|free|available|busy|plans?|scheduled?|events?).*?(on|for)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/
-      );
+      let queryMatch = input.match(/(can i|do i|am i|is there|what's|what is|show|list|anything|free|available|busy|plans?|scheduled?|events?).*?(on|for)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/);
       if (queryMatch) {
-        return {
-          intent: 'query',
-          day: queryMatch[3]
-        };
+        return { intent: 'query', day: queryMatch[3] };
       }
-      // List all events
       if (input.match(/all events|everything|full calendar|show calendar|list all|what's my week|what's my schedule/)) {
         return { intent: 'list' };
       }
       return { intent: 'unknown' };
     }
 
-    // AI response logic
     function aiRespond(input) {
       const parsed = parseInput(input);
       if (parsed.intent === 'add') {
-        // Add event to next occurrence of the weekday
         const date = getNextDateForWeekday(parsed.day);
         const events = loadEvents();
-        events.push({
-          title: parsed.title,
-          date: date,
-          time: parsed.time,
-          desc: ''
-        });
+        events.push({ title: parsed.title, date: date, time: parsed.time, desc: '' });
         saveEvents(events);
         return `Added "${parsed.title}"${parsed.time ? ' at ' + parsed.time : ''} on ${parsed.day} (${date}).`;
       }
@@ -154,7 +245,6 @@
       return "Sorry, I didn't understand. Try asking to add or check events, e.g. 'Add a dentist appointment at 3:00 on Monday' or 'Can I hang out with friends on Tuesday?'.";
     }
 
-    // UI logic
     const chat = document.getElementById('chat');
     const form = document.getElementById('input-area');
     const userInput = document.getElementById('user-input');
@@ -177,11 +267,7 @@
       userInput.value = '';
     });
 
-    // Greet on load
     appendMessage('ai', "Hi! Ask me about your calendar. For example: <br>- Add a dentist appointment at 3:00 on Monday<br>- Can I hang out with friends on Tuesday?");
   </script>
-    <footer>
-    Daylee -  Organize your life, your way.
-  </footer>s
 </body>
 </html>
