--- a/ai.html
+++ b/ai.html
@@ -178,11 +178,11 @@
     });
 
     // Greet on load
-    appendMessage('ai', "Hi! Ask me about your calendar. For example: <br>- Add a dentist appointment at 3:00 on Monday<br>- Can I hang out with friends on Tuesday?");
+    appendMessage('ai', "Hi! Ask me about your calendar. For example: - Add a dentist appointment at 3:00 on Monday<br>- Can I hang out with friends on Tuesday?");
   </script>
     <footer>
     Daylee -  Organize your life, your way.
-  </footer>s
+  </footer>
 </body>
 </html>
 
